--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+	<h1>Welcome to the ARIA role Bindings</h1>
+	<nav role ="navigation">
+		<ul role ="list">
+			<li role = "listitem">
+				
+			    <a href = "#home">Home</a></li>
+			<li>
+				<a href = "About">About</a></li>
+			<li>
+				<a href = "Contact">Contact</a>
+			</li>
+		</ul>
+		
+	</nav>
+	<img role="img" src="image.jpg" alt="A descriptive example image">
+	<ul role="list">
+        <li role="listitem">Item 1: ARIA roles enhance accessibility.</li>
+        <li role="listitem">Item 2: They help screen readers interpret content.</li>
+        <li role="listitem">Item 3: Proper usage ensures better user experience.</li>
+    </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
